--- a/Zotero_references.bib
+++ b/Zotero_references.bib
@@ -385,6 +385,24 @@
   file = {C\:\\Users\\Me\\Zotero\\storage\\XEUA5CVK\\Bachofen et al. - 2020 - Light and VPD gradients drive foliar nitrogen part.pdf}
 }
 
+@article{bakerChlorophyllFluorescenceProbe2008,
+  title = {Chlorophyll {{Fluorescence}}: {{A Probe}} of {{Photosynthesis In Vivo}}},
+  shorttitle = {Chlorophyll {{Fluorescence}}},
+  author = {Baker, Neil R.},
+  date = {2008-06},
+  journaltitle = {Annu. Rev. Plant Biol.},
+  volume = {59},
+  number = {1},
+  pages = {89--113},
+  issn = {1543-5008, 1545-2123},
+  doi = {10.1146/annurev.arplant.59.032607.092759},
+  url = {http://www.annualreviews.org/doi/10.1146/annurev.arplant.59.032607.092759},
+  urldate = {2021-07-27},
+  abstract = {The use of chlorophyll fluorescence to monitor photosynthetic performance in algae and plants is now widespread. This review examines how fluorescence parameters can be used to evaluate changes in photosystem II (PSII) photochemistry, linear electron flux, and CO2 assimilation in vivo, and outlines the theoretical bases for the use of specific fluorescence parameters. Although fluorescence parameters can be measured easily, many potential problems may arise when they are applied to predict changes in photosynthetic performance. In particular, consideration is given to problems associated with accurate estimation of the PSII operating efficiency measured by fluorescence and its relationship with the rates of linear electron flux and CO2 assimilation. The roles of photochemical and nonphotochemical quenching in the determination of changes in PSII operating efficiency are examined. Finally, applications of fluorescence imaging to studies of photosynthetic heterogeneity and the rapid screening of large numbers of plants for perturbations in photosynthesis and associated metabolism are considered.},
+  langid = {english},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\RD93Q637\\Baker_N_2008.RM.pdf}
+}
+
 @article{baldocchiScalingIsopreneFluxes1999,
   title = {Scaling {{Isoprene Fluxes}} from {{Leaves}} to {{Canopies}}: {{Test Cases}} over a {{Boreal Aspen}} and a {{Mixed Species Temperate Forest}}},
   shorttitle = {Scaling {{Isoprene Fluxes}} from {{Leaves}} to {{Canopies}}},
@@ -6306,7 +6324,7 @@
 
 @article{osullivanHighresolutionTemperatureResponses2013,
   title = {High-Resolution Temperature Responses of Leaf Respiration in Snow Gum ({{Eucalyptus}} Pauciflora) Reveal High-Temperature Limits to Respiratory Function},
-  author = {O'sullivan, Odhran S. and Weerasinghe, K. W. Lasantha K. and Evans, John R. and Egerton, John J. G. and Tjoelker, Mark G. and Atkin, Owen K.},
+  author = {O'Sullivan, Odhran S. and Weerasinghe, K. W. Lasantha K. and Evans, John R. and Egerton, John J. G. and Tjoelker, Mark G. and Atkin, Owen K.},
   date = {2013},
   journaltitle = {Plant, Cell \& Environment},
   volume = {36},
@@ -6325,7 +6343,7 @@
 
 @article{osullivanThermalLimitsLeaf2017,
   title = {Thermal Limits of Leaf Metabolism across Biomes},
-  author = {O'sullivan, Odhran S. and Heskel, Mary A. and Reich, Peter B. and Tjoelker, Mark G. and Weerasinghe, Lasantha K. and Penillard, Aurore and Zhu, Lingling and Egerton, John J. G. and Bloomfield, Keith J. and Creek, Danielle and Bahar, Nur H. A. and Griffin, Kevin L. and Hurry, Vaughan and Meir, Patrick and Turnbull, Matthew H. and Atkin, Owen K.},
+  author = {O'Sullivan, Odhran S. and Heskel, Mary A. and Reich, Peter B. and Tjoelker, Mark G. and Weerasinghe, Lasantha K. and Penillard, Aurore and Zhu, Lingling and Egerton, John J. G. and Bloomfield, Keith J. and Creek, Danielle and Bahar, Nur H. A. and Griffin, Kevin L. and Hurry, Vaughan and Meir, Patrick and Turnbull, Matthew H. and Atkin, Owen K.},
   date = {2017},
   journaltitle = {Global Change Biology},
   volume = {23},
