de frenne citation fixed

--- a/Zotero_references.bib
+++ b/Zotero_references.bib
@@ -1791,6 +1791,26 @@
   file = {C\:\\Users\\Me\\Zotero\\storage\\BL5AMFGD\\j.1461-0248.2007.01033.html}
 }
 
+@article{defrenneForestMicroclimatesClimate2021,
+  title = {Forest Microclimates and Climate Change: {{Importance}}, Drivers and Future Research Agenda},
+  shorttitle = {Forest Microclimates and Climate Change},
+  author = {De Frenne, Pieter and Lenoir, Jonathan and Luoto, Miska and Scheffers, Brett R. and Zellweger, Florian and Aalto, Juha and Ashcroft, Michael B. and Christiansen, Ditte M. and Decocq, Guillaume and Pauw, Karen De and Govaert, Sanne and Greiser, Caroline and Gril, Eva and Hampe, Arndt and Jucker, Tommaso and Klinges, David H. and Koelemeijer, Irena A. and Lembrechts, Jonas J. and Marrec, Ronan and Meeussen, Camille and Ogée, Jérôme and Tyystjärvi, Vilna and Vangansbeke, Pieter and Hylander, Kristoffer},
+  date = {2021},
+  journaltitle = {Global Change Biology},
+  volume = {27},
+  number = {11},
+  pages = {2279--2297},
+  issn = {1365-2486},
+  doi = {10.1111/gcb.15569},
+  url = {http://onlinelibrary.wiley.com/doi/abs/10.1111/gcb.15569},
+  urldate = {2021-07-07},
+  abstract = {Forest microclimates contrast strongly with the climate outside forests. To fully understand and better predict how forests' biodiversity and functions relate to climate and climate change, microclimates need to be integrated into ecological research. Despite the potentially broad impact of microclimates on the response of forest ecosystems to global change, our understanding of how microclimates within and below tree canopies modulate biotic responses to global change at the species, community and ecosystem level is still limited. Here, we review how spatial and temporal variation in forest microclimates result from an interplay of forest features, local water balance, topography and landscape composition. We first stress and exemplify the importance of considering forest microclimates to understand variation in biodiversity and ecosystem functions across forest landscapes. Next, we explain how macroclimate warming (of the free atmosphere) can affect microclimates, and vice versa, via interactions with land-use changes across different biomes. Finally, we perform a priority ranking of future research avenues at the interface of microclimate ecology and global change biology, with a specific focus on three key themes: (1) disentangling the abiotic and biotic drivers and feedbacks of forest microclimates; (2) global and regional mapping and predictions of forest microclimates; and (3) the impacts of microclimate on forest biodiversity and ecosystem functioning in the face of climate change. The availability of microclimatic data will significantly increase in the coming decades, characterizing climate variability at unprecedented spatial and temporal scales relevant to biological processes in forests. This will revolutionize our understanding of the dynamics, drivers and implications of forest microclimates on biodiversity and ecological functions, and the impacts of global changes. In order to support the sustainable use of forests and to secure their biodiversity and ecosystem services for future generations, microclimates cannot be ignored.},
+  langid = {english},
+  keywords = {biodiversity,buffering,climate change,ecosystem function,forest,future research,microclimate,offset},
+  annotation = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1111/gcb.15569},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\EW35IPFP\\Frenne et al. - 2021 - Forest microclimates and climate change Importanc.pdf;C\:\\Users\\Me\\Zotero\\storage\\WNT7CS9D\\gcb.html}
+}
+
 @article{defrenneGlobalBufferingTemperatures2019,
   title = {Global Buffering of Temperatures under Forest Canopies},
   author = {De Frenne, Pieter and Zellweger, Florian and Rodríguez-Sánchez, Francisco and Scheffers, Brett R. and Hylander, Kristoffer and Luoto, Miska and Vellend, Mark and Verheyen, Kris and Lenoir, Jonathan},
@@ -2434,26 +2454,6 @@
   keywords = {DELLA,phytochrome,PIF (PHYTOCHROME INTERACTING FACTOR),red to far-red ratio (R : FR),shade avoidance},
   annotation = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1111/j.1469-8137.2008.02507.x},
   file = {C\:\\Users\\Me\\Zotero\\storage\\EM582FLA\\Franklin - 2008 - Shade avoidance.pdf;C\:\\Users\\Me\\Zotero\\storage\\5QTVQ9TW\\j.1469-8137.2008.02507.html}
-}
-
-@article{frenneForestMicroclimatesClimate2021,
-  title = {Forest Microclimates and Climate Change: {{Importance}}, Drivers and Future Research Agenda},
-  shorttitle = {Forest Microclimates and Climate Change},
-  author = {Frenne, Pieter De and Lenoir, Jonathan and Luoto, Miska and Scheffers, Brett R. and Zellweger, Florian and Aalto, Juha and Ashcroft, Michael B. and Christiansen, Ditte M. and Decocq, Guillaume and Pauw, Karen De and Govaert, Sanne and Greiser, Caroline and Gril, Eva and Hampe, Arndt and Jucker, Tommaso and Klinges, David H. and Koelemeijer, Irena A. and Lembrechts, Jonas J. and Marrec, Ronan and Meeussen, Camille and Ogée, Jérôme and Tyystjärvi, Vilna and Vangansbeke, Pieter and Hylander, Kristoffer},
-  date = {2021},
-  journaltitle = {Global Change Biology},
-  volume = {27},
-  number = {11},
-  pages = {2279--2297},
-  issn = {1365-2486},
-  doi = {10.1111/gcb.15569},
-  url = {http://onlinelibrary.wiley.com/doi/abs/10.1111/gcb.15569},
-  urldate = {2021-07-07},
-  abstract = {Forest microclimates contrast strongly with the climate outside forests. To fully understand and better predict how forests' biodiversity and functions relate to climate and climate change, microclimates need to be integrated into ecological research. Despite the potentially broad impact of microclimates on the response of forest ecosystems to global change, our understanding of how microclimates within and below tree canopies modulate biotic responses to global change at the species, community and ecosystem level is still limited. Here, we review how spatial and temporal variation in forest microclimates result from an interplay of forest features, local water balance, topography and landscape composition. We first stress and exemplify the importance of considering forest microclimates to understand variation in biodiversity and ecosystem functions across forest landscapes. Next, we explain how macroclimate warming (of the free atmosphere) can affect microclimates, and vice versa, via interactions with land-use changes across different biomes. Finally, we perform a priority ranking of future research avenues at the interface of microclimate ecology and global change biology, with a specific focus on three key themes: (1) disentangling the abiotic and biotic drivers and feedbacks of forest microclimates; (2) global and regional mapping and predictions of forest microclimates; and (3) the impacts of microclimate on forest biodiversity and ecosystem functioning in the face of climate change. The availability of microclimatic data will significantly increase in the coming decades, characterizing climate variability at unprecedented spatial and temporal scales relevant to biological processes in forests. This will revolutionize our understanding of the dynamics, drivers and implications of forest microclimates on biodiversity and ecological functions, and the impacts of global changes. In order to support the sustainable use of forests and to secure their biodiversity and ecosystem services for future generations, microclimates cannot be ignored.},
-  langid = {english},
-  keywords = {biodiversity,buffering,climate change,ecosystem function,forest,future research,microclimate,offset},
-  annotation = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1111/gcb.15569},
-  file = {C\:\\Users\\Me\\Zotero\\storage\\EW35IPFP\\Frenne et al. - 2021 - Forest microclimates and climate change Importanc.pdf;C\:\\Users\\Me\\Zotero\\storage\\WNT7CS9D\\gcb.html}
 }
 
 @article{friedlingsteinClimateCarbonCycle2006,
