mission et al. 2007 added

--- a/Zotero_references.bib
+++ b/Zotero_references.bib
@@ -5565,6 +5565,25 @@
   file = {C\:\\Users\\Me\\Zotero\\storage\\JKV8YDZM\\Miller et al. - 2021 - Only sun-lit leaves of the uppermost canopy exceed.pdf;C\:\\Users\\Me\\Zotero\\storage\\ACDRN6ER\\S0168192321000307.html}
 }
 
+@article{missonPartitioningForestCarbon2007,
+  title = {Partitioning Forest Carbon Fluxes with Overstory and Understory Eddy-Covariance Measurements: {{A}} Synthesis Based on {{FLUXNET}} Data},
+  shorttitle = {Partitioning Forest Carbon Fluxes with Overstory and Understory Eddy-Covariance Measurements},
+  author = {Misson, Laurent and Baldocchi, D. D. and Black, T. A. and Blanken, P. D. and Brunet, Y. and Curiel Yuste, J. and Dorsey, J. R. and Falk, M. and Granier, A. and Irvine, M. R. and Jarosz, N. and Lamaud, E. and Launiainen, S. and Law, B. E. and Longdoz, B. and Loustau, D. and McKay, M. and Paw U, K. T. and Vesala, T. and Vickers, D. and Wilson, K. B. and Goldstein, A. H.},
+  date = {2007-05-14},
+  journaltitle = {Agricultural and Forest Meteorology},
+  volume = {144},
+  number = {1},
+  pages = {14--31},
+  issn = {0168-1923},
+  doi = {10.1016/j.agrformet.2007.01.006},
+  url = {https://www.sciencedirect.com/science/article/pii/S0168192307000329},
+  urldate = {2021-07-27},
+  abstract = {Forests are complex ecosystems characterized by several distinctive vertical layers with different functional properties. Measurements of CO2 fluxes by the eddy-covariance method at different heights can be used to separate sources and sinks in these layers. We used meteorological and eddy-covariance flux data gathered at 10 sites in the FLUXNET network across a wide range of forest type, structure and climate. We showed that eddy-covariance flux measurements made in the understory are problematic at night in open forests because of the build up of a strong inversion layer, but are more reliable during the day. Denser forests have higher turbulence at night in the understory because the inversion is weaker. However, the flux footprint above and below canopy is less similar than in more open forests, partly because wind direction is more deflected while entering the canopy. We showed that gross primary productivity (GPP) of the understory can reach 39\% of the total canopy GPP, with an average of 14\% across the studied sites. Both understory leaf area index (LAI) and light penetration through the canopy are important for understory GPP. We found that understory respiration contributed an average of 55\% to ecosystem respiration, with a range of 32–79\%. Understory in deciduous forests (62\%) had higher contributions to ecosystem respiration than in evergreen forests (49\%). Boreal and temperate forests had a mean understory respiration contribution of 61\%, while semi-arid forests showed lower values (44\%). The normalized understory respiration fluxes at 20°C were negatively related to soil temperature, when differences in soil moisture across sites are taken into account. We showed evidence that drought limited the efficiency of microbial metabolic activity. Understory respiration fluxes were positively correlated with gross ecosystem primary productivity.},
+  langid = {english},
+  keywords = {Deciduous,Evergreen,Forest floor,Net ecosystem exchange,Photosynthesis,Respiration},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\FDQFZAFI\\Misson et al. - 2007 - Partitioning forest carbon fluxes with overstory a.pdf;C\:\\Users\\Me\\Zotero\\storage\\XBQA8FZ4\\S0168192307000329.html}
+}
+
 @article{monsonInteractionsTemperatureIntercellular2016,
   title = {Interactions between Temperature and Intercellular {{CO2}} Concentration in Controlling Leaf Isoprene Emission Rates},
   author = {Monson, Russell K. and Neice, Amberly A. and Trahan, Nicole A. and Shiach, Ian and McCorkel, Joel T. and Moore, David J. P.},
