--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -162,7 +162,7 @@ In combination with $T_{air}$, RH determines vapor pressure deficit (VPD) -- the
 
 **Air temperature, $T_{air}$, often shows little variation across the vertical gradient, but under certain circumstances it can be significantly buffered by forest canopies (Figs. `r fig_NEON_vertical`, `r SIfig_NEON_all`).**
 The $T_{air}$ gradient along canopies and understories varies with factors such as radiation fluxes, local topography, vertical air mixing, cloud cover and vegetation [@defrenneForestMicroclimatesClimate2021]. 
-Typically, dense canopies buffer understories from high maximum $T_{air}$ relatively more than open canopies -- *i.e.*, dense canopy understories can have cooler maximum daytime $T_{air}$ and warmer minimum $T_{air}$ during the night than open canopy understories or nearby clearings [@defrenneForestMicroclimatesClimate2021; @vonarxSpatiotemporalEffectsForest2012a; @defrenneGlobalBufferingTemperatures2019; @davisMicroclimaticBufferingForests2019; @zellweger_seasonal_2019; @ramboCanopyMicroclimateResponse2009]. 
+Typically, dense canopies buffer understories from high maximum $T_{air}$ relatively more than open canopies -- *i.e.*, dense canopy understories can have cooler maximum daytime $T_{air}$ and warmer minimum $T_{air}$ during the night than open canopy understories or nearby clearings [@missonPartitioningForestCarbon2007; @defrenneForestMicroclimatesClimate2021; @vonarxSpatiotemporalEffectsForest2012a; @defrenneGlobalBufferingTemperatures2019; @davisMicroclimaticBufferingForests2019; @zellweger_seasonal_2019; @ramboCanopyMicroclimateResponse2009]. 
 Notably, this pattern can be reversed in open forests, where below-canopy maximum $T_{air}$ can be warmer than canopy $T_{air}$ due to turbulent air mixing and thermal radiative flux from the soil and the canopy that is intercepted by lower-canopy layers, analogous to 'canopy greenhouse effect' [e.g., OSBS, Figs. `r fig_NEON_vertical`g, `r SIfig_NEON_all`b, @banerjeeExplainingConvectorEffect2017; @curtis_intracanopy_2019;@zweifelMiddayStomatalClosure2002; @hadleyInfluenceKrummholzMat1987; @ramboCanopyMicroclimateResponse2009; @hardwickRelationshipLeafArea2015].    
 
 **The buffering patterns described above vary geographically, seasonally, and across forest types [Figs. `r fig_NEON_vertical`, `r SIfig_NEON_all`, @frenneForestMicroclimatesClimate2021].**
